--- a/footer.html
+++ b/footer.html
@@ -47,7 +47,7 @@
       }
       .cols > h2 {
         font-size: 26px;
-        text-align: center;
+        text-align: left;
         color: white;
       }
       .cols > a {
