day-2 all task done

--- a/footer.html
+++ b/footer.html
@@ -84,8 +84,8 @@
             src="https://uploads-ssl.webflow.com/5c77a918ef19681741be7bca/5fc9236f9ab08c7bdf83fe75_Logo-300px.png"
             alt=""
           />
-          <p>© 2022 My Hours.</p>
-          <p>All rights reserved.</p>
+          <p class="col-1-p" >© 2022 My Hours.</p>
+          <p class="col-1-p" >All rights reserved.</p>
         </div>
         <div class="cols">
           <h2>Product</h2>
