--- a/homepage.html
+++ b/homepage.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="/homepage.css">
     <link rel="stylesheet" href="/header.css">
-    <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="/footer.css">
 </head>
 <body>
     <div id="mainnavbar"></div>
