--- a/supportpage.html
+++ b/supportpage.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="supportpage.css">
+    <link rel="stylesheet" href="/header.css">
+    <link rel="stylesheet" href="/footer.css">
   </head>
   <body>
     <div id="navbar">  </div>
@@ -61,8 +63,8 @@
   </body>
 </html>
 <script type="module" >
-  //  import navbar from "./header.js"
-  //  document.getElementById('navbar').innerHTML=navbar();
-  //  import footer from "./footer.js"
-  //  document.getElementById('main-footer').innerHTML=footer();
+   import navbar from "./header.js"
+   document.getElementById('navbar').innerHTML=navbar();
+   import footer from "./footer.js"
+   document.getElementById('main-footer').innerHTML=footer();
 </script>
