profile page completed

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
       type="image/x-icon"
     />
     <title>Projects -My Hours</title>
-    <link rel="stylesheet" href="./projects.css" />
+    <link rel="stylesheet" href="./style/projects.css" />
   </head>
   <body>
     <div id="pj_cont">
