--- a/team.html
+++ b/team.html
@@ -70,9 +70,13 @@
         }
 
         #div3{
+            border: 1px solid;
             width:100%;
             height: 50px;
             margin: auto;
+        }
+        #query{
+            width: 500px;
         }
 
 
@@ -84,16 +88,6 @@
             font-weight: lighter;
             font-size: 15px;
         }
-        /* table tr{
-            border: 1px solid black;
-        } */
-        th{
-            /* border: 1px solid black; */
-            /* margin-bottom: 15px; */
-        }
-        /* tbody{
-            border: 1px solid black;
-        } */
 
         hr{
             border-top: 2.5px solid rgb(196, 196, 196);
@@ -132,7 +126,7 @@
                 </div>
             </div>
             <div id="div3">
-                <input type="text" placeholder="search by project or client's name">
+                <input type="text" placeholder="search by project or client's name" id="query">
                 <button>status</button>
                 <button>download</button>
             </div>
