--- a/projects.html
+++ b/projects.html
@@ -89,35 +89,7 @@
           </div>
 
           <!-- table with details -->
-          <div class="table_details">
-            <table>
-              <tr>
-                <th>
-                  <div><input type="checkbox" />NAME</div>
-                </th>
-                <th>CLIENT</th>
-                <th>TOTAL HOURS</th>
-                <th>BILLABLE AMOUNT</th>
-                <th>BUDGET SPENT</th>
-                <th>CREATED</th>
-                <th>STATUS</th>
-                <th>ACTION</th>
-              </tr>
-              <tr>
-                <th>
-                  <div><input type="checkbox" />NAME</div>
-                </th>
-                <td>NAME</td>
-                <td>CLIENT</td>
-                <td>TOTAL HOURS</td>
-                <td>BILLABLE AMOUNT</td>
-                <td>BUDGET SPENT</td>
-                <td>CREATED</td>
-                <td>STATUS</td>
-                <td>ACTION</td>
-              </tr>
-            </table>
-          </div>
+          <div class="table_details"></div>
         </div>
       </div>
     </div>
