--- a/track.html
+++ b/track.html
@@ -120,7 +120,7 @@
               </div>
 
               <div class="labelbox t-p-h-a">
-                <a class="fb-aws-n-tx" href=""
+                <a class="fb-aws-n-tx" href="./Apps/Apps.html"
                   ><i class="fa-solid fa-mobile-button"></i
                   >&nbsp;&nbsp;&nbsp;Apps</a
                 >
@@ -156,7 +156,7 @@
                     <p><a href="">Subscription</a></p>
                     <hr />
                     <p onclick="profileSignout()"><a href="">Signout</a></p>
-                    <p><a href="">Profile</a></p>
+                    <p><a href="./profile.html">Profile</a></p>
                   </div>
                 </div>
               </div>
