--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <div class="" id="pj_in_p2">
           <div class="head_pj">
             <h1 class="prj">Projects</h1>
-            <a href=""
+            <a href="./projects.html"
               ><button class="ad_nw_pj">
                 <i class="fa-solid fa-plus"></i> Add new project
               </button></a
