Revert "Merge pull request #34 from sushank678/fw19_1038_day-4"
This reverts commit b19c64c14ac05976fe0600247bf02c10685485ad, reversing
changes made to 2f8c3bc1e20dc74075423deb40a9b7480ea4eafd.

--- a/projects.html
+++ b/projects.html
@@ -169,7 +169,7 @@
         <div class="" id="pj_in_p2">
           <div class="head_pj">
             <h1 class="prj">Projects</h1>
-            <a href="./projects.html"
+            <a href=""
               ><button class="ad_nw_pj">
                 <i class="fa-solid fa-plus"></i> Add new project
               </button></a
