--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,7 @@
                       />
                     </div>
                     <div class="parainsideatag">
-                      <p><a href="">Clients</a></p>
+                      <p><a href="client.html">Clients</a></p>
                       <p><a href="">Invoices</a></p>
                       <p><a href="">Uninvoiced</a></p>
                     </div>
@@ -97,15 +97,15 @@
                       />
                     </div>
                     <div class="parainsideatag">
-                      <p><a href="">Team members</a></p>
-                      <p><a href="">Teams</a></p>
+                      <p><a href="team.html">Team members</a></p>
+                      <p><a href="myteams.html">Teams</a></p>
                     </div>
                   </div>
                 </div>
               </div>
               <div id="protrailexpire">
                 <p>Pro trial expires in 13 days.</p>
-                <a href="">Keep/leave the Pro</a>
+                <a href="Upgrade(Dashboard)/upgrade.html">Keep/leave the Pro</a>
               </div>
               <div style="background-color: #f8f9fa" id="helpApps">
                 <div class="labelbox t-p-h-a">
@@ -116,14 +116,14 @@
                 </div>
 
                 <div class="labelbox t-p-h-a">
-                  <a class="fb-aws-n-tx" href=""
+                  <a class="fb-aws-n-tx" href="Apps/Apps.html"
                     ><i class="fa-solid fa-mobile-button"></i
                     >&nbsp;&nbsp;&nbsp;Apps</a
                   >
                 </div>
 
                 <div class="labelbox">
-                  <a class="fb-aws-n-tx" href=""
+                  <a class="fb-aws-n-tx" href="whatnew.html"
                     ><i class="fa-solid fa-bell"></i>&nbsp;&nbsp;&nbsp;What's
                     new</a
                   >
