--- a/Learn about Project/learn.html
+++ b/Learn about Project/learn.html
@@ -18,7 +18,7 @@
           src="https://downloads.intercomcdn.com/i/o/243859/0561bb690901c9af0a421845/b23dc3c0de0722811774756a43e93e5d.png"
           alt=""
         />
-        <a href=""
+        <a href="../homep.html"
           ><i class="fa-solid fa-arrow-up-right-from-square"> </i> Go to My
           Home</a
         >
@@ -60,7 +60,15 @@
           will find written instructions as well.
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/PqXO5AbUWpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/PqXO5AbUWpA"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
         <p>
           Please go to the <a href="#">Projects</a> tab to add a new project to
           your account.
@@ -320,8 +328,12 @@
         <p class="gotohomePara"><a href="">Visit homepage</a></p>
       </div>
       <div id="socialmedia">
-        <p><a href=""><i class="fa-brands fa-facebook-f"></i></a></p>
-        <p><a href=""><i class="fa-brands fa-twitter"></i></a></p>
+        <p>
+          <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+        </p>
+        <p>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+        </p>
       </div>
     </div>
   </body>
