--- a/otp.html
+++ b/otp.html
@@ -56,7 +56,7 @@
         if(otp === "1234"){
             window .location.href = "pay.html";
         } else {
-            alert("Please enter correct otp");
+            alert("Please enter correct OTP");
         }
     }
 </script>
