--- a/profile.html
+++ b/profile.html
@@ -38,13 +38,13 @@
                 <div class="mainaccordin">
                   <div class="conBoxes">
                     <div class="labelbox t-p-h-a">
-                      <a class="fb-aws-n-tx" href=""
+                      <a class="fb-aws-n-tx" href="./track.html"
                         ><i class="fa-solid fa-stopwatch"></i> &nbsp;&nbsp;
                         Track</a
                       >
                     </div>
                     <div class="labelbox t-p-h-a">
-                      <a class="fb-aws-n-tx" href=""
+                      <a class="fb-aws-n-tx" href="./projects.html"
                         ><i class="fa-solid fa-briefcase"></i
                         >&nbsp;&nbsp;&nbsp;Project</a
                       >
