--- a/track.html
+++ b/track.html
@@ -221,7 +221,9 @@
           tasks to your team and monitor allocated time.
         </div>
         <div class="mt4">
-          <a href="" id="learnAboutProjectsAndTasksLink"
+          <a
+            href="./Learn about Project/learn.html"
+            id="learnAboutProjectsAndTasksLink"
             >Learn about projects and tasks
             <i class="fa-solid fa-square-arrow-up-right"></i
           ></a>
