--- a/use.html
+++ b/use.html
@@ -21,7 +21,7 @@
     <div> <p   class="heading-1">Use cases </p></div>
     <div><h2 class="heading-2">& how My Hours solves problems</h2></div>
     <div class="heading-3">From tracking time, to reporting and invoicing your clients, My Hours is there for you the whole time.</div>
- <a href="#"><button id="button_start" onclick="homejii()">Get Started -It's Free </button>  </a>
+ <a href="track.html"><button id="button_start" >Get Started -It's Free </button>  </a>
 
 
 
