--- a/Upgrade(Dashboard)/upgrade.html
+++ b/Upgrade(Dashboard)/upgrade.html
@@ -1,46 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trail Expaired</title>
-    <link rel="stylesheet" href="../Upgrade(Dashboard)/upgrade.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../Upgrade(Dashboard)/upgrade.css" />
+    <link rel="stylesheet" href="../Sidebar/sidebar.css" />
+  </head>
+  <body>
     <div id="parent">
-        <div id="child1"></div>
-        <div id="child2">
-            <h1 id="h1">My Hours Pro trial is nearly over</h1>
-            <p id="p">Please purchase the Pro subscription or pick the generous Free plan below.</p>
-
-            <div id="grandChile1">
-                <h5 id="h5">My Hours Pro subscription</h5>
-                <p id="p1">Pro plan includes ( <a href="">view pricing</a> ):</p>
-                <ul id="ulli">
-                    <li>Advanced billable rates</li>
-                    <li>Flexible Manager role</li>
-                    <li>Add/edit logs on behalf of your team</li>
-                    <li>Project budgets, team rates and project profitability</li>
-                    <li>Invoice and lock logged time</li>
-                    <li>Advanced reporting (custom logo, scheduling, excel downloads)</li>
-                    <li>Better team management with approval workflow, auditing, user groups & more</li>
-                </ul>
-
-                    <div id="buttonflex">
-                        <a href=""><div id="purchaseProButton">Purchase Pro</div></a>
-                        <p id="month6">$6/month <span>per user (billed annually)</span> </p>
+      <div id="child1">
+        <div id="sidebarBox">
+          <div id="img-fr-sb">
+            <img
+              id="logo-sq"
+              src="https://icon-library.com/images/256-256-ed559f9ab4ee6cec08ffde71c58a68af-grid.png"
+              alt=""
+            />
+            <img
+              src="https://app.myhours.com/assets/myhours_app_logo_icon.svg"
+              alt=""
+            />
+          </div>
+          <div style="background-color: #f8f9fa" id="to-scroll">
+            <div id="accmainbox">
+              <div class="mainaccordin">
+                <div class="conBoxes">
+                  <div class="labelbox t-p-h-a">
+                    <a class="fb-aws-n-tx" href=""
+                      ><i class="fa-solid fa-stopwatch"></i> &nbsp;&nbsp;
+                      Track</a
+                    >
+                  </div>
+                  <div class="labelbox t-p-h-a">
+                    <a class="fb-aws-n-tx" href="./projects.html"
+                      ><i class="fa-solid fa-briefcase"></i
+                      >&nbsp;&nbsp;&nbsp;Project</a
+                    >
+                  </div>
+                  <div class="fb-aws-n-tx labelbox">
+                    <span fb-aws-span
+                      ><i class="fa-solid fa-chart-column"></i
+                      >&nbsp;&nbsp;&nbsp;Report</span
+                    >
+                    <img
+                      src="https://cdn-icons-png.flaticon.com/512/25/25623.png"
+                      alt="Down Arrow"
+                    />
+                    <div class="parainsideatag">
+                      <p><a href="">Dashboard</a></p>
+                      <p><a href="">Activity</a></p>
+                      <p><a href="">Team pivot</a></p>
+                      <p><a href="">Economy</a></p>
+                      <p><a href="">Timesheet</a></p>
                     </div>
-            
+                  </div>
+                </div>
+                <div class="conBoxes">
+                  <div class="fb-aws-n-tx labelbox">
+                    <span fb-aws-span
+                      ><i class="fa-solid fa-folder"></i
+                      >&nbsp;&nbsp;&nbsp;Clients</span
+                    >
+                    <img
+                      src="https://cdn-icons-png.flaticon.com/512/25/25623.png"
+                      alt="Down Arrow"
+                    />
+                  </div>
+                  <div class="parainsideatag">
+                    <p><a href="./client.html">Clients</a></p>
+                    <p><a href="">Invoices</a></p>
+                    <p><a href="">Uninvoiced</a></p>
+                  </div>
+                </div>
+                <div class="conBoxes">
+                  <div class="fb-aws-n-tx labelbox">
+                    <span fb-aws-span
+                      ><i class="fa-solid fa-users"></i
+                      >&nbsp;&nbsp;&nbsp;Team</span
+                    >
+                    <img
+                      id="team-arrow-img"
+                      src="https://cdn-icons-png.flaticon.com/512/25/25623.png"
+                      alt="Down Arrow"
+                    />
+                  </div>
+                  <div class="parainsideatag">
+                    <p><a href="./team.html">Team members</a></p>
+                    <p><a href="./team.html">Teams</a></p>
+                  </div>
+                </div>
+              </div>
             </div>
+            <div id="protrailexpire">
+              <p>Pro trial expires in 13 days.</p>
+              <a href="./Upgrade(Dashboard)/upgrade.html">Keep/leave the Pro</a>
+            </div>
+            <div style="background-color: #f8f9fa" id="helpApps">
+              <div class="labelbox t-p-h-a">
+                <a class="fb-aws-n-tx" href=""
+                  ><i class="fa-solid fa-circle-question"></i
+                  >&nbsp;&nbsp;&nbsp;Help</a
+                >
+              </div>
 
+              <div class="labelbox t-p-h-a">
+                <a class="fb-aws-n-tx" href="/Apps/Apps.html"
+                  ><i class="fa-solid fa-mobile-button"></i
+                  >&nbsp;&nbsp;&nbsp;Apps</a
+                >
+              </div>
 
-            <a class="parahref" href=""> <img src="https://cdn-icons-png.flaticon.com/512/7252/7252326.png" alt=""> <p>Downgrade to the Free plan</p></a>
-            <a class="parahref1" href=""> <img src="https://cdn-icons.flaticon.com/png/512/4317/premium/4317197.png?token=exp=1658427618~hmac=a3ee45c686dd96dd701d765d8bdc55c6" alt=""> <p>Not Sure? Chat with us</p></a>
-            <hr id="horizontalLine">
-            <a class="parahref2" href=""> <img src="https://cdn-icons.flaticon.com/png/512/5910/premium/5910314.png?token=exp=1658427843~hmac=b3ea987e089ebc35d2db16c715c3c5ae" alt=""> <p>Close the account</p></a>
+              <div class="labelbox">
+                <a class="fb-aws-n-tx" href="./whatnew.html"
+                  ><i class="fa-solid fa-bell"></i>&nbsp;&nbsp;&nbsp;What's
+                  new</a
+                >
+              </div>
 
+              <div class="mainaccordin">
+                <div class="conBoxes">
+                  <div class="m-p-z-f-p fb-aws-n-tx labelbox">
+                    <span class="fb-aws-span"
+                      ><i class="fa-solid fa-user"></i>&nbsp;&nbsp;&nbsp;<span
+                        onclick="profile()"
+                        id="name-profile"
+                        >Profile</span
+                      ></span
+                    >
+                    <img
+                      id="p-n-img-log"
+                      src="https://cdn-icons-png.flaticon.com/512/25/25623.png"
+                      alt="Down Arrow"
+                    />
+                  </div>
+
+                  <div class="parainsideatag">
+                    <p><a href="">Company</a></p>
+                    <p><a href="">Account Admin</a></p>
+                    <p><a href="">Subscription</a></p>
+                    <hr />
+                    <p onclick="profileSignout()"><a href="">Signout</a></p>
+                    <p><a href="">Profile</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <div id="child2">
+        <h1 id="h1">My Hours Pro trial is nearly over</h1>
+        <p id="p">
+          Please purchase the Pro subscription or pick the generous Free plan
+          below.
+        </p>
+
+        <div id="grandChile1">
+          <h5 id="h5">My Hours Pro subscription</h5>
+          <p id="p1">Pro plan includes ( <a href="">view pricing</a> ):</p>
+          <ul id="ulli">
+            <li>Advanced billable rates</li>
+            <li>Flexible Manager role</li>
+            <li>Add/edit logs on behalf of your team</li>
+            <li>Project budgets, team rates and project profitability</li>
+            <li>Invoice and lock logged time</li>
+            <li>
+              Advanced reporting (custom logo, scheduling, excel downloads)
+            </li>
+            <li>
+              Better team management with approval workflow, auditing, user
+              groups & more
+            </li>
+          </ul>
+
+          <div id="buttonflex">
+            <a href="../payment.html"
+              ><div id="purchaseProButton">Purchase Pro</div></a
+            >
+            <p id="month6">$6/month <span>per user (billed annually)</span></p>
+          </div>
+        </div>
+
+        <a class="parahref" href="">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/7252/7252326.png"
+            alt=""
+          />
+          <p>Downgrade to the Free plan</p></a
+        >
+        <a class="parahref1" href=""> <p>Not Sure? Chat with us</p></a>
+        <hr id="horizontalLine" />
+        <a class="parahref2" href=""> <p>Close the account</p></a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
+<script src="../Sidebar/sidebar.js"></script>
