--- a/myteams.html
+++ b/myteams.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Teams | My Hours</title>
     <script
       src="https://kit.fontawesome.com/10b417d43c.js"
       crossorigin="anonymous"
