--- a/use.html
+++ b/use.html
@@ -192,7 +192,7 @@
 <!-- <-------------------footer section--------------------> 
 
 
- <div id=main-footer>Add footer here</div> 
+ <div id=main-footer></div> 
 
 </body>
 </html>
