--- a/Learn about Project/learn.html
+++ b/Learn about Project/learn.html
@@ -18,7 +18,7 @@
           src="https://downloads.intercomcdn.com/i/o/243859/0561bb690901c9af0a421845/b23dc3c0de0722811774756a43e93e5d.png"
           alt=""
         />
-        <a href="../homep.html"
+        <a href="../index.html"
           ><i class="fa-solid fa-arrow-up-right-from-square"> </i> Go to My
           Home</a
         >
