--- a/Upgrade(Dashboard)/upgrade.html
+++ b/Upgrade(Dashboard)/upgrade.html
@@ -99,7 +99,7 @@
             </div>
             <div style="background-color: #f8f9fa" id="helpApps">
               <div class="labelbox t-p-h-a">
-                <a class="fb-aws-n-tx" href=""
+                <a class="fb-aws-n-tx" href="../Help.html"
                   ><i class="fa-solid fa-circle-question"></i
                   >&nbsp;&nbsp;&nbsp;Help</a
                 >
