--- a/myteams.html
+++ b/myteams.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Teams | My Hours</title>
     <script
       src="https://kit.fontawesome.com/10b417d43c.js"
       crossorigin="anonymous"
@@ -108,7 +108,7 @@
             </div>
             <div style="background-color: #f8f9fa" id="helpApps">
               <div class="labelbox t-p-h-a">
-                <a class="fb-aws-n-tx" href=""
+                <a class="fb-aws-n-tx" href="Help.html"
                   ><i class="fa-solid fa-circle-question"></i
                   >&nbsp;&nbsp;&nbsp;Help</a
                 >
