--- a/add_members.html
+++ b/add_members.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Team member</title>
+    <title>Add Team member | My Hours</title>
     <link rel="stylesheet" href="/add_members.css" />
+    <link
+      rel="icon"
+      href="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/b5f28d17-3a80-4bf3-aa0c-82ca5cdcccf2.png?w=100&q=50"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="parent">
@@ -98,7 +103,7 @@
             </div>
             <div style="background-color: #f8f9fa" id="helpApps">
               <div class="labelbox t-p-h-a">
-                <a class="fb-aws-n-tx" href=""
+                <a class="fb-aws-n-tx" href="./Help.html"
                   ><i class="fa-solid fa-circle-question"></i
                   >&nbsp;&nbsp;&nbsp;Help</a
                 >
