--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="body">
         <div style="width:90%; margin:auto"><p id="heading"><strong>Organize</strong> projects, <strong>Track</strong> time and <strong>Report</strong> your work</p></div>
         <p id="subhead">Coordinate projects and tasks. Track your work hours and create awesome-looking reports for clients. <strong>All-in-one free time tracking software.</strong></p>
-        <button id="btn1" onclick="homepg()"><a href="">Get Started - It's Free</a></button>  
+        <button id="btn1" onclick="homepg()"><a href="signup.html">Get Started - It's Free</a></button>  
         <div style="width:90%; margin:auto; margin-top: 40px;"><img src="https://uploads-ssl.webflow.com/5c77a918ef19681741be7bca/5fd337b26121202b5bfb96d7_OriginalSize(1)-p-1080.png" alt=""></div>
         <p style="font-size: 30px; margin-top: 80px;">Trusted by more than <strong>100.000 businesses</strong> worldwide</p> 
         <div id="block1"> 
@@ -138,7 +138,7 @@
         <div id="block9">
             <div>
                 <div style="margin: auto; width:60%"><h1>Waste no more time, jump right in!</h1></div>
-                <button id="btn1" onclick="homepg()"><a href="">Get Started - It's Free</a></button>  
+                <button id="btn1" onclick="homepg()"><a href="signup.html">Get Started - It's Free</a></button>  
                 <p>My Hours is Free to use for teams of any size.<a style="color:black; text-decoration: underline;" href="">Pro paid plan</a> comes with additional features like invoicing, admin controls and priority support.</p>
             </div>
             <div>
